--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My first GitHub project</title>
+    <title>My gitHub Project</title>
     <meta charset="utf-8">
   </head>
   
   <body>
+   
   </body>
 </html>
